<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
  <Button
	android:id="@+id/create_database"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="#4e2e4e"
	android:text="@string/create"
	/>
  
  <Button
	android:id="@+id/add_data"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="#00009c"
	android:text="@string/add"
	/>
  
	<Button
		android:id="@+id/update_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#32cd32"
		android:text="@string/update"
	/>
	
	<Button
		android:id="@+id/delete_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#ff00ff"
		android:text="@string/delete"
	/>

	<Button
		android:id="@+id/query_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#d98719"
		android:text="@string/query"
	/>
	
	<Button
		android:id="@+id/replace_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#adeaea"
		android:text="@string/replace"
	/>
	
</LinearLayout>
